tests/invalid/depth01.h
#include "depth02.h"
